RESOLVED FIXED269019
[WebGPU] Device lost promise takes too long to resolve
https://bugs.webkit.org/show_bug.cgi?id=269019
Summary [WebGPU] Device lost promise takes too long to resolve
Mike Wyrzykowski
Reported 2024-02-08 14:18:33 PST
Run https://gpuweb.github.io/cts/standalone/?q=webgpu:api,validation,state,device_lost,destroy,* it takes many seconds to run some of the tests, the entire suite takes several minutes. It seems like we do not resolve the device lost promise in a timely fashion.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-08 14:19:01 PST
Mike Wyrzykowski
Comment 2 2024-02-09 12:27:43 PST
EWS
Comment 3 2024-02-12 13:17:18 PST
Committed 274482@main (dd3938f3a697): <https://commits.webkit.org/274482@main> Reviewed commits have been landed. Closing PR #24162 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.