[WebGPU] Device lost promise takes too long to resolve https://bugs.webkit.org/show_bug.cgi?id=269019 <radar://122582535>

Reviewed by Dan Glastonbury.

We weren't resolving onSubmittedWorkDone in a timely fashion
when the device was lost, leading to perceived hang running
api,validation,state,detroy,* tests.

* Source/WebGPU/WebGPU/Device.mm:
(WebGPU::Device::loseTheDevice):
* Source/WebGPU/WebGPU/Queue.h:
(WebGPU::Queue::makeInvalid): Deleted.
* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::Queue::makeInvalid):
(WebGPU::Queue::onSubmittedWorkDone):
(WebGPU::Queue::onSubmittedWorkScheduled):

Canonical link: https://commits.webkit.org/274482@main